# deno5e-util-ms

./: .gitignore  .npmignore  README.md  build-script.ts  build-strip-extension.ts  build.sh  deno5e-util-ms-main.ts  deno5e-util-ms.js  entropy.ts  for-await.js  for-await.ts  global-dict.ts  index.ts  json-store.ts  main.ts  package-lock.json  package.json  run.sh  test.ts  tsc.sh  tsconfig.json  ytp-ad-skip.js
context/: context.ts  find-app.ts
deno-lib/: app-404.ts  app-ack.ts  app-reply-http-request.ts  app-self-identification.ts  app-sha3binding.ts  parse-url.ts
dependencies/: lib-compat.ts
functions/: deferred-job-queue.ts  entropy.ts  global-dict.ts  identify.ts  json-store.ts  misc.ts  request-uri-handler.ts  string-map-serialization.ts  tape.ts  ua-important-characteristics.ts
functions/@not-actively-used/: accepted-languages-old.ts  noty.ts
functions/crypto/: hmac.ts  memory-hard-kd.ts  sha3.ts  totp-hmac.ts
functions/data-structure/: flood_mitigation_logger.ts  map-but-with-default.ts  quick-queue.ts  symbol-registry.ts  tape.ts
functions/encoding/: base-encode.ts  unescape.ts  universal-bit-regrouping.ts  (+1 more)
protocols/: abc.ts  assert-passthrough.ts  error-warning-info.ts  fail.ts  handled-uri.ts  http.ts  language-code.ts  success-fail.ts  wrapper-options.ts
routed-apps/: app-404.ts  app-ack.ts  app-reply-http-request.ts  app-sha3binding.ts
sha3towasm/: Cargo.toml
sha3towasm/pkg/: package.json  sha3towasm.js  sha3towasm_bg.wasm  wasm.js
sha3towasm/src/: sha3.rs
texts/: find-app.deprecated.txt  password-words.concept.ts.txt
(+118 files in other folders)
