[package]
name = "sha3towasm"
version = "0.1.0"
authors = ["nuts-n-bits <nuts-n-bits@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rust-crypto = "^0.2"
rust-crypto-wasm = "^0.3"
hex = "^0.4"
wasm-bindgen = "=0.2.61"

[lib]
crate-type = ["cdylib", "rlib"]